test/test-compilation/result.txt
pdjs version  (v8 version 8.6.395.24)
error: Script file 'hjgjhgfjkh.js' not found.
verbose(4): ... you might be able to track this down from the Find menu.
error: Error compiling 'C:/Source/pdjs/test/test-compilation/compile_error.js':
C:/Source/pdjs/test/test-compilation/compile_error.js:1: SyntaxError: Unexpected end of input
(
 
SyntaxError: Unexpected end of input

error: Error running 'C:/Source/pdjs/test/test-compilation/run_error.js':
C:/Source/pdjs/test/test-compilation/run_error.js:1: ReferenceError: xyz is not defined
xyz();
^
ReferenceError: xyz is not defined
    at C:/Source/pdjs/test/test-compilation/run_error.js:1:1

Hello, world!
jsarguments test.js,arg1,2
Hello, world!
jsarguments test.js,arg1,2
other
jsarguments other.js,x
